# planner-solver

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.test.yaml  compose.yaml  pyproject.toml  requirements.txt  run-tests-docker.sh
.github/workflows/: ci.yaml.yml
configs/: api.yaml  logging.yaml  rabbitmq.yaml  time.yaml
docker/: entrypoint-dev.sh  entrypoint-test.sh
modules/: .gitignore
src/base_module/constraints/: after_constraint.py
src/base_module/resources/: MachineryResource.py  machinery_resource.py
src/base_module/scenarios/: simple_shop_floor.py
src/base_module/solvers/: simple_solver.py
src/base_module/targets/: minimum_time_target.py
src/base_module/tasks/: fixed_duration_task.py
src/planner_solver/: __init__.py  api.py  main.py
src/planner_solver/config/: __init__.py  models.py
src/planner_solver/containers/: __init__.py  application.py  singletons.py
src/planner_solver/decorators/: constraint_type.py  parameters.py  resource_type.py  scenario_type.py  solver_type.py  target_type.py  task_type.py
src/planner_solver/exceptions/: type_exceptions.py  worker_exceptions.py
src/planner_solver/models/: base_models.py  enums.py  forms.py  stored_documents.py
src/planner_solver/services/: __init__.py  module_loader_service.py  mongodb_service.py  rabbitmq_service.py  time_service.py  types_service.py  worker_service.py
tests/: conftest.py
tests/integration/: README.md  test_e2e.py  test_mongodb_service.py
tests/integration/configs/: api.yaml  modules.yaml  mongodb.yaml
tests/unit/: README.md
(+9 files in other folders)
