[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planner-solver"
version = "0.1"
readme = "README.md"
authors = [
    { name = "Donato Mastronardi", email = "donato.mastronardi99@gmail.com" }
]
requires-python = ">= 3.11"
dependencies = [
    "ortools",
    "dependency-injector",
    "pydantic-settings[yaml]>=2.1.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
planner-solver="planner_solver.main:run"